<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <View
        android:id="@+id/near_workout_holder"
        android:layout_width="0dp"
        android:layout_height="470dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/near_workout_name"
        style="@style/main_menu_near_workout_name"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/main_menu_near_workout_name"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/near_workout_holder"
        app:layout_constraintTop_toTopOf="@+id/near_workout_holder" />

    <TextView
        android:id="@+id/near_workout_time"
        style="@style/main_menu_near_workout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/main_menu_near_workout_time"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/near_workout_space_count_title"
        style="@style/main_menu_workout_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="5dp"
        android:gravity="bottom"
        android:text="@string/main_menu_near_workout_count_space_title"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/near_workout_name"
        app:layout_constraintTop_toBottomOf="@+id/near_workout_name" />

    <TextView
        android:id="@+id/near_workout_space_count"
        style="@style/main_menu_workout_space_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/main_menu_near_workout_space_count"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/near_workout_space_count_title"
        app:layout_constraintStart_toEndOf="@+id/near_workout_space_count_title"
        app:layout_constraintTop_toTopOf="@+id/near_workout_space_count_title" />

    <TextView
        android:id="@+id/near_workout_payment_status_paid"
        style="@style/main_menu_workout_paid"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/main_menu_near_workout_payment_status_paid"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/near_workout_time"
        app:layout_constraintStart_toStartOf="@+id/near_workout_time" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/near_workout_space_count_title" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/near_workout_location"
        style="@style/main_menu_workout_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:drawablePadding="5dp"
        android:gravity="bottom"
        android:text="@string/main_menu_near_workout_location"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="16dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_menu_location_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/near_workout_couch_name"
        style="@style/main_menu_workout_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:drawablePadding="5dp"
        android:text="Кердун Юлия Олеговна"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="28dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_menu_coach_name_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/item_rating_stars_pic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4" />

    <TextView
        android:id="@+id/couch_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="8(999) 618 10"
        android:textColor="#000000"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_menu_coach_phone_pic"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/couch_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="96kerdun.iuol@dvfu.ru"
        android:textColor="#000000"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/couch_number" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/main_menu_coach_mail_pic"
        app:layout_constraintBottom_toBottomOf="@+id/couch_mail"
        app:layout_constraintEnd_toStartOf="@+id/couch_mail"
        app:layout_constraintTop_toTopOf="@+id/couch_mail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/workout_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Степ аэробика – это специализированный тренинг, который идеально подходит для похудения, проработки мышц ног и ягодиц. Занятие на степ платформе состоит из набора базовых шагов. Они объединены в комбинации и выполняются в разных вариациях, которые отличаются по типу сложности. За счет изменения высоты шага уменьшается или увеличивается нагрузка."
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/near_workout_location"
        app:layout_constraintTop_toBottomOf="@+id/near_workout_location" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_photos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workout_description" />


</androidx.constraintlayout.widget.ConstraintLayout>